--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_height="0dp"
         android:layout_gravity="fill"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@android:color/holo_blue_bright"
+        android:background="#7FFFD4"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
